fect(redis): added redis client to catch weather proxys

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,9 @@
 PORT="your port number"
 WEATHER_API_BASE_URL="your weather api"
 WEATHER_API_KEY="your api key"
+
+REDIS_API_LEY="your redis api key"
+REDIS_DATABASE_URL="your redis database url"
+REDIS_HOST="your host url"
+REDIS_PASSWORD="your redis password"
+REDIS_PORT="your redis port"
